--- a/ML0101EN-Proj-Loan.ipynb
+++ b/ML0101EN-Proj-Loan.ipynb
@@ -868,27 +868,13 @@
             "source": "from sklearn.linear_model import LogisticRegression\n\nloanLR = LogisticRegression(C=0.01, solver='liblinear').fit(X,y)\nyhat_LR = loanLR.predict(X)\n\nprint(\"LR Train Accuracy: \", metrics.accuracy_score(y, yhat_LR))"
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": ""
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": ""
-        },
-        {
             "cell_type": "markdown",
             "metadata": {},
             "source": "# Model Evaluation using Test set\n"
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 86,
             "metadata": {},
             "outputs": [],
             "source": "from sklearn.metrics import jaccard_score\nfrom sklearn.metrics import f1_score\nfrom sklearn.metrics import log_loss\n"
@@ -900,9 +886,15 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 87,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": "--2022-03-24 08:05:56--  https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/loan_test.csv\nResolving s3-api.us-geo.objectstorage.softlayer.net (s3-api.us-geo.objectstorage.softlayer.net)... 67.228.254.196\nConnecting to s3-api.us-geo.objectstorage.softlayer.net (s3-api.us-geo.objectstorage.softlayer.net)|67.228.254.196|:443... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 3642 (3.6K) [text/csv]\nSaving to: \u2018loan_test.csv\u2019\n\nloan_test.csv       100%[===================>]   3.56K  --.-KB/s    in 0s      \n\n2022-03-24 08:05:56 (80.2 MB/s) - \u2018loan_test.csv\u2019 saved [3642/3642]\n\n"
+                }
+            ],
             "source": "!wget -O loan_test.csv https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/loan_test.csv"
         },
         {
@@ -918,37 +910,89 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 88,
             "metadata": {
                 "button": false,
                 "new_sheet": false,
                 "run_control": {
                     "read_only": false
-                }
+                },
+                "scrolled": true
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>Unnamed: 0.1</th>\n      <th>loan_status</th>\n      <th>Principal</th>\n      <th>terms</th>\n      <th>effective_date</th>\n      <th>due_date</th>\n      <th>age</th>\n      <th>education</th>\n      <th>Gender</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n      <td>PAIDOFF</td>\n      <td>1000</td>\n      <td>30</td>\n      <td>9/8/2016</td>\n      <td>10/7/2016</td>\n      <td>50</td>\n      <td>Bechalor</td>\n      <td>female</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5</td>\n      <td>5</td>\n      <td>PAIDOFF</td>\n      <td>300</td>\n      <td>7</td>\n      <td>9/9/2016</td>\n      <td>9/15/2016</td>\n      <td>35</td>\n      <td>Master or Above</td>\n      <td>male</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>21</td>\n      <td>21</td>\n      <td>PAIDOFF</td>\n      <td>1000</td>\n      <td>30</td>\n      <td>9/10/2016</td>\n      <td>10/9/2016</td>\n      <td>43</td>\n      <td>High School or Below</td>\n      <td>female</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>24</td>\n      <td>24</td>\n      <td>PAIDOFF</td>\n      <td>1000</td>\n      <td>30</td>\n      <td>9/10/2016</td>\n      <td>10/9/2016</td>\n      <td>26</td>\n      <td>college</td>\n      <td>male</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>35</td>\n      <td>35</td>\n      <td>PAIDOFF</td>\n      <td>800</td>\n      <td>15</td>\n      <td>9/11/2016</td>\n      <td>9/25/2016</td>\n      <td>29</td>\n      <td>Bechalor</td>\n      <td>male</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+                        "text/plain": "   Unnamed: 0  Unnamed: 0.1 loan_status  Principal  terms effective_date  \\\n0           1             1     PAIDOFF       1000     30       9/8/2016   \n1           5             5     PAIDOFF        300      7       9/9/2016   \n2          21            21     PAIDOFF       1000     30      9/10/2016   \n3          24            24     PAIDOFF       1000     30      9/10/2016   \n4          35            35     PAIDOFF        800     15      9/11/2016   \n\n    due_date  age             education  Gender  \n0  10/7/2016   50              Bechalor  female  \n1  9/15/2016   35       Master or Above    male  \n2  10/9/2016   43  High School or Below  female  \n3  10/9/2016   26               college    male  \n4  9/25/2016   29              Bechalor    male  "
+                    },
+                    "execution_count": 88,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": "test_df = pd.read_csv('loan_test.csv')\ntest_df.head()"
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 93,
             "metadata": {},
-            "outputs": [],
-            "source": "from sklearn.metrics import f1_score\nf1_score(y_test, yhat, average='weighted') \n\nfrom sklearn.metrics import jaccard_score\njaccard_score(y_test, yhat,pos_label=2)"
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": "array([[ 0.49362588,  0.92844966,  3.05981865,  1.97714211, -1.30384048,\n         2.39791576, -0.79772404, -0.86135677],\n       [-3.56269116, -1.70427745,  0.53336288, -0.50578054,  0.76696499,\n        -0.41702883, -0.79772404, -0.86135677],\n       [ 0.49362588,  0.92844966,  1.88080596,  1.97714211,  0.76696499,\n        -0.41702883,  1.25356634, -0.86135677],\n       [ 0.49362588,  0.92844966, -0.98251057, -0.50578054,  0.76696499,\n        -0.41702883, -0.79772404,  1.16095912],\n       [-0.66532184, -0.78854628, -0.47721942, -0.50578054,  0.76696499,\n         2.39791576, -0.79772404, -0.86135677]])"
+                    },
+                    "execution_count": 93,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": "test_df['due_date'] = pd.to_datetime(test_df['due_date'])\ntest_df['effective_date'] = pd.to_datetime(test_df['effective_date'])\ntest_df['dayofweek'] = test_df['effective_date'].dt.dayofweek\ntest_df['weekend'] = test_df['dayofweek'].apply(lambda x: 1 if (x>3)  else 0)\ntest_df.groupby(['Gender'])['loan_status'].value_counts(normalize=True)\ntest_df['Gender'].replace(to_replace=['male','female'], value=[0,1],inplace=True)\ntest_df.groupby(['education'])['loan_status'].value_counts(normalize=True)\nEvalFeature = test_df[['Principal','terms','age','Gender','weekend']]\nEvalFeature = pd.concat([EvalFeature,pd.get_dummies(test_df['education'])], axis=1)\nEvalFeature.drop(['Master or Above'], axis = 1,inplace=True)\nX_eval = EvalFeature\ny_eval = test_df['loan_status'].values\nX_eval= preprocessing.StandardScaler().fit(X_eval).transform(X_eval)\nX_eval[0:5]"
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 95,
             "metadata": {},
             "outputs": [],
-            "source": "from sklearn.metrics import log_loss\nlog_loss(y_test, yhat_prob)"
+            "source": "yhat_eval_knn = neighbor_5.predict(X_eval)\nyhat_eval_tree = loanTree_5.predict(X_eval)\nyhat_eval_svm = loanSVM_linear.predict(X_eval)\nyhat_eval_lr = loanLR.predict(X_eval)"
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 96,
             "metadata": {},
-            "outputs": [],
-            "source": ""
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": "KNN f1 score : 0.7253086419753088\nDecision Tree f1 score : 0.7187928669410151\nSVM f1 score : 0.6304176516942475\nLogistic regression f1 score : 0.6304176516942475\n"
+                }
+            ],
+            "source": "from sklearn.metrics import f1_score\nf1_score(y_test, yhat, average='weighted')\n\nKNN_f1_score = f1_score(y_eval, yhat_eval_knn, average='weighted')\nTree_f1_score = f1_score(y_eval, yhat_eval_tree, average='weighted')\nSVM_f1_score = f1_score(y_eval, yhat_eval_svm, average='weighted')\nLR_f1_score = f1_score(y_eval, yhat_eval_lr, average='weighted')\n\nprint(f'KNN f1 score : {KNN_f1_score}')\nprint(f'Decision Tree f1 score : {Tree_f1_score}')\nprint(f'SVM f1 score : {SVM_f1_score}')\nprint(f'Logistic regression f1 score : {LR_f1_score}')"
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 106,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": "KNN jaccard score : 0.7142857142857143\nDecision jaccard score : 0.6875\nSVM jaccard score : 0.7407407407407407\nLogistic regression jaccard score : 0.7407407407407407\n"
+                }
+            ],
+            "source": "from sklearn.metrics import jaccard_score\n\nKNN_jaccard_score = jaccard_score(y_eval, yhat_eval_knn, pos_label=\"PAIDOFF\")\nTree_jaccard_score = jaccard_score(y_eval, yhat_eval_tree, pos_label=\"PAIDOFF\")\nSVM_jaccard_score = jaccard_score(y_eval, yhat_eval_svm, pos_label=\"PAIDOFF\")\nLR_jaccard_score = jaccard_score(y_eval, yhat_eval_lr, pos_label=\"PAIDOFF\")\n\nprint(f'KNN jaccard score : {KNN_jaccard_score}')\nprint(f'Decision jaccard score : {Tree_jaccard_score}')\nprint(f'SVM jaccard score : {SVM_jaccard_score}')\nprint(f'Logistic regression jaccard score : {LR_jaccard_score}')"
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 107,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": "Logistic regression log loss : 0.5566084946309205\n"
+                }
+            ],
+            "source": "from sklearn.metrics import log_loss\n\nyhat_prob_lr = loanLR.predict_proba(X_eval)\nLR_log_loss = log_loss(y_eval, yhat_prob_lr)\nprint(f'Logistic regression log loss : {LR_log_loss}')"
         },
         {
             "cell_type": "markdown",
@@ -958,7 +1002,7 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "| Algorithm          | Jaccard | F1-score | LogLoss |\n| ------------------ | ------- | -------- | ------- |\n| KNN                | ?       | ?        | NA      |\n| Decision Tree      | ?       | ?        | NA      |\n| SVM                | ?       | ?        | NA      |\n| LogisticRegression | ?       | ?        | ?       |\n"
+            "source": "| Algorithm          | Jaccard | F1-score | LogLoss |\n| ------------------ | ------- | -------- | ------- |\n| KNN                | 0.71    | 0.73     | NA      |\n| Decision Tree      | 0.69    | 0.72     | NA      |\n| SVM                | 0.74    | 0.63     | NA      |\n| LogisticRegression | 0.74    | 0.63     | 0.56    |\n"
         },
         {
             "cell_type": "markdown",
